mdapi/objects/Marketing_Key__c.object
<CustomObject>
    <description>Trade Show, Serial, Disaster Recovery, and other keys given to Marketing.</description>
    <fields>
        <fullName>Activation_Key__c</fullName>
        <description>Key to activate a Trade Show or Serial key
Set on creation</description>
        <externalId>true</externalId>
        <label>Activation Key</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Allocated_On__c</fullName>
        <description>Date when key was allocated.  Set on creation</description>
        <label>Allocated On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Claimed_On__c</fullName>
        <description>Date when key was claimed
Set by trigger when Claimed is changedt to true</description>
        <label>Claimed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Claimed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has the key been claimed?
Set by Webpage</description>
        <label>Claimed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <description>Company of claimer
Set by Webpage</description>
        <label>Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Contact</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Marketing Keys</relationshipLabel>
        <relationshipName>Marketing_Keys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>2 letter Country Code</description>
        <label>Country</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>A brief description of why the key was created.</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Claimant&apos;s Email</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <description>Event related to receiving the key</description>
        <label>Event</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>First name of the claimant</description>
        <label>First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>Last name of claimant</description>
        <label>Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lead related to the key</description>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Marketing Keys</relationshipLabel>
        <relationshipName>Marketing_Keys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Key__c</fullName>
        <externalId>true</externalId>
        <label>Product Key</label>
        <length>64</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Disaster</fullName>
                </value>
                <value>
                    <fullName>IM Serial</fullName>
                    <isActive>false</isActive>
                    <label>IM Serial</label>
                </value>
                <value>
                    <fullName>IT Key</fullName>
                </value>
                <value>
                    <fullName>Trade Show</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Marketing Key</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Activation_Key__c</columns>
        <columns>Type__c</columns>
        <columns>Product_Type__c</columns>
        <columns>Claimed__c</columns>
        <columns>Claimed_On__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Company__c</columns>
        <columns>Event__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Also_Reseller_Trade_Show_Keys</fullName>
        <columns>NAME</columns>
        <columns>Activation_Key__c</columns>
        <columns>Claimed__c</columns>
        <columns>Claimed_On__c</columns>
        <columns>Email__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Event__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Description__c</field>
            <operation>contains</operation>
            <value>Also Reseller</value>
        </filters>
        <label>Also Reseller - Trade Show Keys</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Disaster_Keys_All</fullName>
        <columns>NAME</columns>
        <columns>Activation_Key__c</columns>
        <columns>Claimed__c</columns>
        <columns>Claimed_On__c</columns>
        <columns>Event__c</columns>
        <columns>Email__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Product_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Disaster</value>
        </filters>
        <label>Disaster Keys - All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Disaster_Keys_Claimed</fullName>
        <columns>NAME</columns>
        <columns>Activation_Key__c</columns>
        <columns>Claimed__c</columns>
        <columns>Claimed_On__c</columns>
        <columns>Event__c</columns>
        <columns>Email__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Product_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Disaster</value>
        </filters>
        <filters>
            <field>Claimed__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Disaster Keys - Claimed</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Disaster_Keys_Not_Claimed</fullName>
        <columns>NAME</columns>
        <columns>Activation_Key__c</columns>
        <columns>Claimed__c</columns>
        <columns>Claimed_On__c</columns>
        <columns>Event__c</columns>
        <columns>Email__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Product_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Disaster</value>
        </filters>
        <filters>
            <field>Claimed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Disaster Keys - Not Claimed</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Trade_Show_Keys</fullName>
        <columns>NAME</columns>
        <columns>Activation_Key__c</columns>
        <columns>Claimed__c</columns>
        <columns>Claimed_On__c</columns>
        <columns>Email__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Event__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Trade Show</value>
        </filters>
        <label>Trade Show Keys - All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>MK-{000000}</displayFormat>
        <label>Marketing Key Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marketing Keys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>